# Yumeri

./: Cargo.toml
.cargo/: config.toml
crates/yumeri-animation/: Cargo.toml
crates/yumeri-animation/src/: animator.rs  easing.rs  handle.rs  interpolate.rs  keyframes.rs  lib.rs  playback.rs  stagger.rs  timeline.rs  tween.rs
crates/yumeri-app/: Cargo.toml
crates/yumeri-app/examples/: animation.rs  hello.rs  postfx.rs  render2d.rs  text.rs  texture.rs  ui.rs  ui_counter.rs  ui_template_showcase.rs  ui_todo.rs  video.rs  window_options.rs
crates/yumeri-app/src/: application.rs  delegate.rs  error.rs  input_conv.rs  lib.rs  window.rs
crates/yumeri-audio/: Cargo.toml
crates/yumeri-audio/examples/: play.rs
crates/yumeri-audio/src/: audio.rs  cache.rs  decode.rs  effect.rs  error.rs  lib.rs  player.rs  sample_format.rs
crates/yumeri-audio/src/effects/: low_pass.rs  mod.rs
crates/yumeri-components/: Cargo.toml
crates/yumeri-components/src/: checkbox.rs
crates/yumeri-components/templates/: checkbox.template.ron  showcase_card.template.ron
crates/yumeri-components/themes/: dark.tokens.ron
crates/yumeri-compositor/: Cargo.toml
crates/yumeri-compositor/src/: backend.rs  compositor.rs  event_loop.rs  input.rs  main.rs
crates/yumeri-compositor/src/render/: mod.rs  surface_texture.rs
crates/yumeri-compositor/src/server/: compositor.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs
crates/yumeri-desktop/: Cargo.toml
crates/yumeri-desktop/src/: lib.rs  wallpaper.rs
crates/yumeri-font/: Cargo.toml
crates/yumeri-font/src/: attrs.rs  error.rs  font.rs  lib.rs  shaped_glyph.rs  text_buffer.rs
crates/yumeri-image/: Cargo.toml
crates/yumeri-image/src/: error.rs  image.rs  lib.rs  pixel_format.rs
crates/yumeri-image/src/backend/: image_rs.rs  mod.rs
crates/yumeri-input/: Cargo.toml
crates/yumeri-input/src/: action.rs  event.rs  key.rs  lib.rs  mouse.rs  state.rs
crates/yumeri-live2d/: Cargo.toml  build.rs
crates/yumeri-live2d/src/: error.rs  lib.rs  loader.rs  model.rs
crates/yumeri-live2d/src/core/: ffi.rs  moc.rs  mod.rs  model.rs  types.rs
crates/yumeri-live2d/src/framework/: breath.rs  display_info.rs  expression.rs  eye_blink.rs  lip_sync.rs  mod.rs  model_matrix.rs  model_setting.rs  motion.rs  motion_queue.rs  param_ops.rs  physics.rs  pose.rs  target_point.rs  user_data.rs
crates/yumeri-renderer/: Cargo.toml  build.rs
crates/yumeri-renderer/src/: context.rs  error.rs  frame.rs  lib.rs  render_state.rs  text.rs
crates/yumeri-renderer/src/gpu/: device.rs  instance.rs  mod.rs  surface.rs  swapchain.rs
crates/yumeri-renderer/src/graph/: builder.rs  compiler.rs  executor.rs  mod.rs  pass.rs  resource.rs
crates/yumeri-renderer/src/live2d/: clipping.rs  coords.rs  mod.rs
crates/yumeri-renderer/src/postfx/: effect.rs  grayscale.rs  mod.rs
crates/yumeri-renderer/src/renderer/: instance_pipeline.rs  mod.rs  pipeline.rs
crates/yumeri-renderer/src/renderer/renderer2d/: batch.rs  mod.rs  pipeline.rs  shapes.rs
crates/yumeri-renderer/src/resource/: buffer.rs  image.rs  mod.rs
crates/yumeri-renderer/src/shaders/: sdf_2d.frag  sdf_2d.vert  yuv_to_rgb.comp
crates/yumeri-renderer/src/shaders/live2d/: live2d.frag  live2d.vert  live2d_mask.frag  live2d_mask.vert
crates/yumeri-renderer/src/shaders/postfx/: grayscale.comp
crates/yumeri-renderer/src/texture/: glyph_cache.rs  gpu_texture.rs  mod.rs  store.rs
crates/yumeri-renderer/src/ui/: context.rs  mod.rs  node.rs  render_list.rs  renderer.rs  scene.rs
crates/yumeri-renderer/src/video/: mod.rs  yuv_converter.rs
crates/yumeri-shell/: Cargo.toml
crates/yumeri-shell/src/: anchor.rs  layer.rs  lib.rs  shell.rs  surface.rs
crates/yumeri-template/: Cargo.toml
crates/yumeri-template/src/: animation.rs  binding.rs  default_tokens.rs  lib.rs  registry.rs  resolve.rs  schema.rs  state.rs  tests.rs  token.rs
crates/yumeri-threading/: Cargo.toml
crates/yumeri-threading/src/: channel.rs  lib.rs  pool.rs  scoped.rs  task.rs
crates/yumeri-types/: Cargo.toml
crates/yumeri-types/src/: lib.rs
crates/yumeri-ui/: Cargo.toml
crates/yumeri-ui/src/: app.rs  callback.rs  component.rs  element.rs  event_ctx.rs  layout.rs  lib.rs  reconciler.rs  renderer_bridge.rs  style.rs  template_provider.rs  template_view_builder.rs  transition.rs  tree.rs  view_ctx.rs
crates/yumeri-ui/src/event/: focus.rs  hit_test.rs  mod.rs  propagation.rs
crates/yumeri-ui/src/widget/: button.rs  checkbox.rs  column.rs  container.rs  image.rs  mod.rs  row.rs  scroll_view.rs  shape.rs  stack.rs  text.rs  text_input.rs
crates/yumeri-video/: Cargo.toml
crates/yumeri-video/examples/: play.rs
crates/yumeri-video/src/: clock.rs  demux.rs  error.rs  frame.rs  lib.rs  pixel_format.rs  player.rs  video.rs
crates/yumeri-video/src/decode/: mod.rs  software.rs  vulkan.rs  vulkan_ffi.rs
crates/yumeri-wm/: Cargo.toml
crates/yumeri-wm/src/: backend.rs  capture.rs  compositor.rs  error.rs  event_loop.rs  focus.rs  input.rs  layout.rs  lib.rs  main.rs  window.rs
crates/yumeri-wm/src/backend/: mod.rs  wayland.rs
crates/yumeri-wm/src/render/: mod.rs  surface_texture.rs
crates/yumeri-wm/src/server/: compositor.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs
crates/yumeri-wm/src/shell/: focus.rs  mod.rs  window.rs
examples/low-pass/: Cargo.toml
examples/low-pass/src/: main.rs
examples/mao/: Cargo.toml
examples/mao/src/: main.rs
