[package]
name = "yumeri-app"
version = "0.1.0"
edition = "2024"

[features]
default = ["ui"]
ui = ["dep:yumeri-ui"]

[dependencies]
log = "0.4.29"
thiserror = "2"
winit = "0.30.13"
yumeri-animation = { version = "0.1.0", path = "../yumeri-animation" }
yumeri-font = { version = "0.1.0", path = "../yumeri-font" }
yumeri-input = { version = "0.1.0", path = "../yumeri-input" }
yumeri-renderer = { version = "0.1.0", path = "../yumeri-renderer" }
yumeri-threading = { version = "0.1.0", path = "../yumeri-threading" }
yumeri-types = { version = "0.1.0", path = "../yumeri-types" }
yumeri-ui = { version = "0.1.0", path = "../yumeri-ui", optional = true }

[dev-dependencies]
env_logger = "0.11.9"
yumeri-video = { path = "../yumeri-video" }
yumeri-template = { path = "../yumeri-template" }
yumeri-components = { path = "../yumeri-components" }
