[package]
name = "yumeri-compositor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yumeri-compositor"
path = "src/main.rs"

[dependencies]
yumeri-wm = { path = "../yumeri-wm" }
yumeri-shell = { path = "../yumeri-shell" }
yumeri-desktop = { path = "../yumeri-desktop" }
yumeri-renderer = { path = "../yumeri-renderer" }
yumeri-image = { path = "../yumeri-image" }
yumeri-threading = { path = "../yumeri-threading" }
yumeri-types = { path = "../yumeri-types" }

wayland-server = "0.31"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "client"] }
wayland-backend = { version = "0.3", features = ["server_system", "client_system"] }

raw-window-handle = "0.6"
memmap2 = "0.9"
slotmap = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
rustix = { version = "1", features = ["fs"] }
xkbcommon = { version = "0.8", features = ["wayland"] }
