[package]
name = "yumeri-live2d"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
glam = "0.29"
indexmap = { version = "2", features = ["serde"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[features]
default = ["dynamic"]
dynamic = []
static_ = []
windows_msvc_md = []
windows_msvc_mt = []

[dev-dependencies]
anyhow = "1"
