[package]
name = "yumeri-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
taffy = "0.7"
slotmap = "1"
yumeri-animation = { version = "0.1.0", path = "../yumeri-animation" }
yumeri-input = { version = "0.1.0", path = "../yumeri-input" }
yumeri-renderer = { version = "0.1.0", path = "../yumeri-renderer" }
yumeri-font = { version = "0.1.0", path = "../yumeri-font" }
yumeri-types = { version = "0.1.0", path = "../yumeri-types" }

[dev-dependencies]
yumeri-app = { version = "0.1.0", path = "../yumeri-app" }
