[package]
name = "yumeri-wm"
version = "0.1.0"
edition = "2021"

[lib]
name = "yumeri_wm"
path = "src/lib.rs"

[dependencies]
yumeri-renderer = { path = "../yumeri-renderer" }
yumeri-types = { path = "../yumeri-types" }

ash = { version = "0.38.0", default-features = false, features = ["std", "loaded"] }
gpu-allocator = { version = "0.28.0", features = ["vulkan"] }
slotmap = "1"
